--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,8 @@
 AddDefaultCharset utf-8
-
 RewriteEngine On
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?route=$1 [L,QSA]
 
-RewriteRule ^(.*)$ index.php
